--- a/src/styles/components/cases.scss
+++ b/src/styles/components/cases.scss
@@ -44,6 +44,7 @@
             position: relative;
             background: $black;
             cursor: pointer;
+            width: 33.333%;
             &:hover {
                 .case-image {
                     opacity: .4;
